Projeto de gerencimento de senhas seguras em JAVA